# FastAPI_CRUD

./: items_views.py  main.py  pyproject.toml
users/: views.py
