[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["21Sirius <21siriusss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
fastapi = "^0.104.1"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
pydantic = {extras = ["email"], version = "^2.4.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
